# c_starter

./: .gitignore  CMakeLists.txt
src/: common_defs.h  main.c  version.h.in
src/controllers/: app_ctrl.c  app_ctrl.h
src/models/: app_model.c  app_model.h
src/utils/: logging.c  logging.h  parse_args.c  parse_args.h  sys_interface.c  sys_interface.h
